[package]
name = "rust_example"
version = "0.1.0"
authors = ["Jonas Danielsson <jonas@bitcraze.io>"]
edition = "2018"

[lib]
name = "rust_example"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_drivers = { path = "../../../core/rust" }
cty = "0.2.1"
freertos_rs = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
